assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&display=swap');

/* Default settings */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    line-height: 1.5;
    text-align: center;
}

body {
    background-color: aqua;
    display: flex;
    flex-direction: column;
    font-family: "Libre Caslon Text", serif;
    color: black;
    min-height: 100vh;
    min-width: 100vw;
}

/* Header Styling */
header {
    background-color: #333;
    border-bottom: 2px solid #3a3a3a;
    padding: 1rem 0;
    color: white;
}

/* Main Content area styling */
main {
    flex: 1 0 auto;
    text-align: center;
    padding: 20px;
    margin: auto;
}

section {
    margin-bottom: 30px;
}

/* The MAP Section */
#map-section {
    background-color: aquamarine;
    max-width: 800px;
}

#map-container {
    background-color: pink;
    max-width: 800px;
    /* adding position relative - for the floating point to respond better to responsivity */
    position: relative;
}

#map-container h3 {
    padding: 15px 0;
}

#map-image {
    max-width: 100%;
    border: 2px solid #3a3a3a;
    border-radius: 10px;
}

#map-description {
    margin-top: 10px;
    padding: 10px 0;
    background-color: bisque;
}

/* The Floating Dot */
.floating-dot {
    position: absolute;
    width: 18px;
    height: 18px;
    background-color: rgb(248, 248, 248, 0.9);
    border-radius: 50%;
    cursor: pointer;
    /* Add animation */
    animation: pulse 1.2s infinite;
    transform: translate(-50%, -50%);
}

.floating-dot:hover {
    background-color: white;
    transform: scale(1.2);

}

/* Defining keyframes for the floating dot animation effect */
@keyframes pulse {
    0% {
        transform: scale(0.9);
        opacity: 0.6;
    }

    50% {
        transform: scale(1.2);
        opacity: 1;
    }

    100% {
        transform: scale(0.9);
        opacity: 0.6;
    }
}

/* Footer Styling */
footer #social {
    list-style-type: none;
    padding: 20px 0;
    background-color: #333;
    border-top: 2px solid #3a3a3a;
    display: flex;
    justify-content: space-evenly;
}

/* Social Icons Hover Feedback */
#social i:hover {
    color: rgb(173, 22, 22);
}

/* Social Icons Styling */
#social i {
    font-size: 1.5rem;
    color: #fff;
}

